--- a/package.json
+++ b/package.json
@@ -15,9 +15,7 @@
   },
   "description": "Create valid EPUB (v2) ebooks with metadata, contents and cover image.",
   "devDependencies": {
-    "@jest/globals": "^29.5.0",
     "@types/archiver": "^5.3.2",
-    "@types/jest": "^29.5.2",
     "@types/mime": "^3.0.1",
     "@types/node": "^20.2.5",
     "@types/pug": "^2.0.6",
@@ -27,10 +25,9 @@
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-import-resolver-typescript": "^3.5.5",
-    "jest": "^29.5.0",
     "prettier": "^2.8.8",
-    "ts-jest": "^29.1.0",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "vitest": "^3.2.4"
   },
   "engines": {
     "node": ">16.0.0"
@@ -40,7 +37,22 @@
       "@dylanarmstrong",
       "prettier"
     ],
-    "rules": {}
+    "rules": {},
+    "overrides": [
+      {
+        "files": [
+          "__tests__/**/*.ts"
+        ],
+        "rules": {
+          "import/no-extraneous-dependencies": [
+            "error",
+            {
+              "devDependencies": true
+            }
+          ]
+        }
+      }
+    ]
   },
   "exports": "./lib/index.js",
   "files": [
@@ -72,7 +84,7 @@
     "lint:src": "eslint src/ --fix",
     "lint:test": "eslint __tests__/ --fix",
     "prettier": "prettier --write --ignore-unknown src/ __tests__/ example/example.ts",
-    "test": "npm run build && node --experimental-vm-modules ./node_modules/jest/bin/jest"
+    "test": "vitest"
   },
   "type": "module",
   "version": "4.1.2"
